--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,22 +2,19 @@
 import { Icon } from "astro-icon/components";
 
 //Social Links
-const MeetUp = "https://www.meetup.com/ja-JP/osaka-web-designers-and-developers-meetup/";
+const MeetUp =
+  "https://www.meetup.com/ja-JP/osaka-web-designers-and-developers-meetup/";
 const Discord = "https://discord.com/invite/k8xj8d75f6";
 const LinkedIn = "https://www.linkedin.com/company/owddm-kwddm/";
-
 
 const today = new Date();
 const Year = today.getFullYear();
 
-
 const props = Astro.props;
 ---
 
-<footer class="bg-stone-400/70">
-  <div
-    class="container px-6 py-8 mx-auto font-Futurewave tracking-widest text-gray-800"
-  >
+<footer class="bg-stone-400/50">
+  <div class="container px-6 py-8 mx-auto font-Futurewave tracking-widest">
     <div class="flex flex-col items-center text-center">
       <a href="/" class="flex justify-center space-x-3 md:justify-start">
         <h2 class="sr-only">OWDDM</h2>
@@ -44,13 +41,13 @@ const props = Astro.props;
 
     <hr class="my-10 border-gray-200 dark:border-gray-700" />
 
-    <div class="flex flex-col items-center sm:flex-row sm:justify-between">
+    <div
+      class="flex flex-col items-center sm:flex-row sm:justify-between dark:text-sky-100 text-gray-950"
+    >
       <p class="text-xs sm:text-sm text-center justify-center">
-        © Copyright <span class="font-Zen tracking-widest text-xl"
-          >{Year}</span
+        © Copyright <span class="font-Zen tracking-widest text-xl">{Year}</span
         ><br /><a
           href="/credits"
-          class="text-gray-800"
           title="All Rights Reserved in creating this workshop project."
           aria-label="Credit attribution page to make this project"
           >All Rights Reserved.
@@ -58,7 +55,7 @@ const props = Astro.props;
         <div class="mt-3 sm:mt-0">
           <a
             href="https://masscom.media"
-            class="flex justify-center space-x-3 md:justify-start text-gray-800"
+            class="flex justify-center space-x-3 md:justify-start"
             target="_blank"
             aria-label="A Masscom Media Project"
           >
@@ -69,9 +66,7 @@ const props = Astro.props;
                 aria-label="MassCom Media logo"
               />
             </div>
-            <span
-              class="self-center hidden sm:block text-xs font-extrabold tracking-[0.6em]"
-            >
+            <span class="self-center hidden sm:block text-sm tracking-[0.6em]">
               a MassCom Media project</span
             >
           </a>
@@ -81,7 +76,7 @@ const props = Astro.props;
           <a
             href={MeetUp}
             target="_blank"
-            class="mx-4 text-sm transition-colors duration-300 text-gray-800"
+            class="mx-4 text-sm transition-colors duration-300"
             aria-label="MeetUp"
           >
             <svg
@@ -101,7 +96,7 @@ const props = Astro.props;
           <a
             href={Discord}
             target="_blank"
-            class="mx-4 text-sm transition-colors duration-300 text-gray-800"
+            class="mx-4 text-sm transition-colors duration-300"
             aria-label="Discord"
           >
             <svg
@@ -121,7 +116,7 @@ const props = Astro.props;
           <a
             href={LinkedIn}
             target="_blank"
-            class="mx-4 text-sm transition-colors duration-300 text-gray-800"
+            class="mx-4 text-sm transition-colors duration-300"
             aria-label="LinkedIn"
           >
             <svg
