--- a/src/components/TextArticle.astro
+++ b/src/components/TextArticle.astro
@@ -20,7 +20,7 @@ import IntroSection from "./IntroSection.astro";
       <li>Navigate VS Code and Git.</li>
       <li>Create a simple HyGraph project.</li>
       <li>Refactor code effectively.</li>
-      <li>Design your blog/portfolio layout.</li>
+      <li>Design your Astro blog/portfolio layout.</li>
       <li>Import components seamlessly.</li>
       <li>Fetch data from the HyGraph API.</li>
       <li>Basic understanding on how to use Tailwind CSS.</li>
