Visual changes & Wording

--- a/src/components/IntroSection.astro
+++ b/src/components/IntroSection.astro
@@ -18,7 +18,7 @@ const { title, id } = Astro.props;
         {title}
       </h2>
       <div
-        class="mt-6 text-sm sm:text-lg leading-8 text-red-800 dark:text-sky-500 font-Futurewave px-6 sm:px-8"
+        class="mt-6 text-sm sm:text-lg leading-8 dark:text-sky-500 font-Futurewave px-6 sm:px-8"
       >
         <slot name="lead" />
       </div>
