--- a/src/components/PortfolioIndex.astro
+++ b/src/components/PortfolioIndex.astro
@@ -93,7 +93,7 @@ const sizes = "(min-width: 1024px) 33vw, (min-width: 768px) 50vw, 100vw";
                     <Icon
                       name="logomark"
                       class="h-8 w-auto rounded border-2 border-white/50 bg-sky-500 sm:h-10 lg:h-12"
-                      aria-label="MassCom Media logo"
+                      aria-label="OWDDM logo"
                     />
                   </div>
                   <span class="self-center font-Futurewave text-xs">
