--- a/src/pages/portfolio/index.astro
+++ b/src/pages/portfolio/index.astro
@@ -17,13 +17,13 @@ const {
   >
     <div class="mt-8 flex flex-col items-center gap-4">
       <a href="/" class="flex justify-center space-x-3 md:justify-start">
-        <h1 class="flex items-center justify-center">
+        <p class="flex items-center justify-center">
           <Icon
             name="logomark"
             class="h-12 w-auto sm:h-20"
             aria-label="Osaka/Kyoto Web Designers and Developers - OWDDM/KWDDM logo"
           />
-        </h1>
+        </p>
         <span
           class="self-center font-extrabold uppercase tracking-[0.6em] text-base sm:text-xl"
           >{title}</span
