--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ const Year = today.getFullYear();
 const props = Astro.props;
 ---
 
-<footer class="bg-stone-400/50">
+<footer class="bg-sky-400/50">
   <div class="container px-6 py-8 mx-auto font-Futurewave tracking-widest">
     <div class="flex flex-col items-center text-center">
       <a href="/" class="flex justify-center space-x-3 md:justify-start">
