--- a/src/components/LandingPageBlog.astro
+++ b/src/components/LandingPageBlog.astro
@@ -2,17 +2,16 @@
 // For this page also think of using pagination for a better UX, but that is up to you!
 
 import { Icon } from "astro-icon/components";
+import { formatDate } from "../js/utils";
 
-const response = await fetch(
-  `${import.meta.env.HYGRAPH_ENDPOINT}`,
-  {
-    method: "POST",
-    headers: {
-      "Content-Type": "application/json",
-      Accept: "application/json",
-    },
-    body: JSON.stringify({
-      query: `
+const response = await fetch(`${import.meta.env.HYGRAPH_ENDPOINT}`, {
+  method: "POST",
+  headers: {
+    "Content-Type": "application/json",
+    Accept: "application/json",
+  },
+  body: JSON.stringify({
+    query: `
         {
           posts (first: 3) {
             title
@@ -29,71 +28,80 @@ const response = await fetch(
           }
         }
       `,
-    }),
-  }
-);
+  }),
+});
 const posts = await response.json();
 ---
 
-<ul class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-sky-500 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3 columns-3">
-    {
-      posts.data.posts.map((post) => (
-        <li>
-          <div class="px-3 pb-12 pt-3 nm-flat-stone-100-lg hover:nm-flat-sky-100-lg dark:nm-flat-gray-800-lg dark:hover:nm-flat-gray-700-lg transition duration-200 ease-in-out transform hover:scale-110 rounded-lg p-8 text-center max-w-sm w-full">
-            <article class="flex max-w-xl flex-col items-start justify-between">
-              <div class="flex items-center gap-x-4 text-xs font-Futurewave">
-                <time datetime="2024-02-27">
-                  {post.date}
-                </time>
-                <a
-                  href={`/blog/${post.slug}`}
-                  class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100"
-                >
-                  {post.tags[0]}
+<ul
+  class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-stone-500 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3 columns-3"
+>
+  {
+    posts.data.posts.map((post) => (
+      <li>
+        <div class="px-3 pb-12 pt-3 nm-flat-stone-200-lg hover:nm-flat-sky-100-lg dark:nm-flat-gray-800-lg dark:hover:nm-flat-gray-700-lg transition duration-200 ease-in-out transform hover:scale-110 rounded-lg p-8 text-center max-w-sm w-full">
+          <article class="flex max-w-xl flex-col items-start justify-between">
+            <div class="flex items-center gap-x-4 text-xs font-Futurewave">
+              <time>{formatDate(post.date)}</time>
+              <a
+                href={`/blog/${post.slug}`}
+                class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100"
+              >
+                {post.tags[0]}
+              </a>
+            </div>
+            <div class="mt-4">
+              <h3 class="mt-3 text-lg line-clamp-1 font-semibold leading-6 font-Futurewave">
+                <a href={`/blog/${post.slug}`} class="text-sky-600">
+                  <span class="absolute inset-0" />
+                  {post.slug}
                 </a>
-              </div>
-              <div class="mt-4">
-                <h3 class="mt-3 text-lg line-clamp-1 font-semibold leading-6 font-Futurewave">
-                  <a href={`/blog/${post.slug}`} class="text-sky-600">
-                    <span class="absolute inset-0" />
-                    {post.slug}
-                  </a>
-                </h3>
-                <p class="mt-5 line-clamp-3 text-sm leading-6">
-                  {post.description}
-                </p>
-              </div>
+              </h3>
+              <p class="mt-5 line-clamp-3 text-sm leading-6">
+                {post.description}
+              </p>
+            </div>
 
-              <div class="relative mt-8 flex items-center gap-x-4">
-                <hr class="py-6 border border-orange-600" />
-                <div class="flex justify-center space-x-3 md:justify-start">
-                  <h2 class="sr-only">Osaka/Kyoto Web Designers and Developers Meetup</h2>
-                  <div class="flex items-center justify-center">
-                    <Icon
-                      name="masscomMediaLogo"
-                      class="h-8 w-auto rounded border-2 border-white/50 hover:bg-sky-500 sm:h-10 lg:h-12 bg-sky-100"
-                      aria-label="MassCom Media logo"
-                    />
-                  </div>
-                  <span class="self-center font-Futurewave text-xs">
-                    <>
-                      <a href="/me-myself-and-i" class="text-sky-600 tracking-widest">{post.authors[0].name}</a>
-                      <br />
-                      <span class="text-gradient-brand font-extrabold uppercase tracking-[0.6em] border-t border-sky-500">
-                        . . . . . .
-                      </span>
-                    </>
-                  </span>
+            <div class="relative mt-8 flex items-center gap-x-4">
+              <hr class="py-6 border border-orange-600" />
+              <div class="flex justify-center space-x-3 md:justify-start">
+                <h2 class="sr-only">
+                  Osaka/Kyoto Web Designers and Developers Meetup
+                </h2>
+                <div class="flex items-center justify-center">
+                  <Icon
+                    name="masscomMediaLogo"
+                    class="h-8 w-auto rounded border-2 border-white/50 bg-stone-500 hover:bg-sky-500 sm:h-10 lg:h-12"
+                    aria-label="MassCom Media logo"
+                  />
                 </div>
+                <span class="self-center font-Futurewave text-xs">
+                  <>
+                    <a
+                      href="/me-myself-and-i"
+                      class="text-sky-600 tracking-widest"
+                    >
+                      {post.authors[0].name}
+                    </a>
+                    <br />
+                    <span class="text-gradient-brand font-extrabold uppercase tracking-[0.6em] border-t border-sky-500">
+                      . . . . . .
+                    </span>
+                  </>
+                </span>
               </div>
-            </article>
-          </div>
-        </li>
-      ))
-    }
+            </div>
+          </article>
+        </div>
+      </li>
+    ))
+  }
 </ul>
 
-<p class="text-center sm:text-right text-sm font-Futurewave my-2"class="text-right text-sm font-Futurewave">
+<p
+  class="text-center sm:text-right text-sm font-Futurewave my-2"
+  class="text-right text-sm font-Futurewave"
+>
   <span class="font-heading leading-9 text-sm"
     >Of all the blogs, in all of the cloud, you had to walk into mine!</span
   >
