--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -38,7 +38,7 @@ const { title, description } = Astro.props;
   <meta property="twitter:image" content={image} />
   <!-- sitemap -->
   <link rel="sitemap" href="/sitemap-index.xml" />
-  <script>
+  <script is:inline>
     function setMode() {
       if (
         localStorage.getItem("color-theme") === "dark" ||
