--- a/src/components/TextPortfolioIndex.astro
+++ b/src/components/TextPortfolioIndex.astro
@@ -10,11 +10,21 @@ import IntroSection from "./IntroSection.astro";
       <br />
       <span class="leading-9 text-xl">Your mission is to create your own!</span>
     </p>
-        <p class="text-center text-xs font-Futurewave">
+    <p class="text-center text-xs font-Futurewave">
       <br />
       if you think this looks bad...
       <br />
-      <span class="leading-9 text-xl">check out the portfolio's project page!</span>
+      <span class="leading-9 text-xl"
+        >check out the portfolio's project page!</span
+      >
+    </p>
+    <p class="text-center text-xs font-Futurewave">
+      <br />
+      Something's wrong. Let's find out how to...
+      <br />
+      <span class="leading-9 text-xl"
+        >improve this page!</span
+      >
     </p>
   </Fragment>
 </IntroSection>
