--- a/src/components/Notice.astro
+++ b/src/components/Notice.astro
@@ -39,10 +39,19 @@ const props = Astro.props;
       <p
         class="mt-6 text-sm sm:text-lg leading-8 text-blue-950 dark:text-sky-500 font-Futurewave px-6 sm:px-8"
       >
-        This free workshop is designed for aspiring developers! Learn how to
-        build a blog/portfolio using Tailwind CSS and Hygraph, with a little
-        dive / getting your feet wet, into the Astro framework. Enhance your
-        understanding of modern web development while creating this
+        This free workshop is designed for aspiring developers or if you just
+        want to know how to build a website!
+      </p>
+      <p
+        class="mt-6 text-sm sm:text-lg leading-8 text-blue-950 dark:text-sky-500 font-Futurewave px-6 sm:px-8"
+      >
+        Learn how to build a blog/portfolio using Tailwind CSS and Hygraph, with
+        a little dive / getting your feet wet, into the Astro framework.
+      </p>
+      <p
+        class="mt-6 text-sm sm:text-lg leading-8 text-blue-950 dark:text-sky-500 font-Futurewave px-6 sm:px-8"
+      >
+        Enhance your understanding of modern web development while creating this
         blog/portfolio.
       </p>
       <div class="mx-auto max-w-2xl lg:text-center px-6 lg:px-0">
