Created: types.ts | Minor changes

--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -24,7 +24,7 @@ import Skills from "../assets/img/mushroom.svg";
           <h2
             class="text-xl font-bold tracking-tight sm:text-2xl font-Futurewave"
           >
-            Boost your skills.<br />Create your own w-app today.
+            Boost your skills.<br />Create your own w-app-site today.
           </h2>
           <p class="mt-6 text-lg leading-8 text-sky-600">
             This workshop is designed for web development beginners or hobbyists
