--- a/src/components/DarkMode.astro
+++ b/src/components/DarkMode.astro
@@ -13,58 +13,62 @@ import { Icon } from "astro-icon/components";
     id="theme-toggle-light-icon"
     name="theme/light"
     class="h-12 w-12 hidden"
+    aria-label="light mode"
   />
   <Icon
     id="theme-toggle-dark-icon"
     name="theme/dark"
     class="h-12 w-12 hidden"
+    aria-label="dark mode"
   />
 </button>
-
 
 <script>
   function darkMode() {
     var themeToggleDarkIcon = document.getElementById("theme-toggle-dark-icon");
-    var themeToggleLightIcon = document.getElementById("theme-toggle-light-icon");
+    var themeToggleLightIcon = document.getElementById(
+      "theme-toggle-light-icon"
+    );
 
     // Change the icons inside the button based on previous settings
     if (
-        localStorage.getItem("color-theme") === "dark" ||
-        (!("color-theme" in localStorage) &&
-            window.matchMedia("(prefers-color-scheme: dark)").matches)
+      localStorage.getItem("color-theme") === "dark" ||
+      (!("color-theme" in localStorage) &&
+        window.matchMedia("(prefers-color-scheme: dark)").matches)
     ) {
-        themeToggleLightIcon.classList.remove("hidden");
+      themeToggleLightIcon.classList.remove("hidden");
     } else {
-        themeToggleDarkIcon.classList.remove("hidden");
+      themeToggleDarkIcon.classList.remove("hidden");
     }
 
+    // Button
     var themeToggleBtn = document.getElementById("theme-toggle");
 
     themeToggleBtn.addEventListener("click", function () {
-        // Toggle icons inside button
-        themeToggleDarkIcon.classList.toggle("hidden");
-        themeToggleLightIcon.classList.toggle("hidden");
+      // Toggle icons inside button
+      themeToggleDarkIcon.classList.toggle("hidden");
+      themeToggleLightIcon.classList.toggle("hidden");
 
-        // If set via local storage previously
-        if (localStorage.getItem("color-theme")) {
-            if (localStorage.getItem("color-theme") === "light") {
-                document.documentElement.classList.add("dark");
-                localStorage.setItem("color-theme", "dark");
-            } else {
-                document.documentElement.classList.remove("dark");
-                localStorage.setItem("color-theme", "light");
-            }
+      // If set via local storage previously
+      if (localStorage.getItem("color-theme")) {
+        if (localStorage.getItem("color-theme") === "light") {
+          document.documentElement.classList.add("dark");
+          localStorage.setItem("color-theme", "dark");
+        } else {
+          document.documentElement.classList.remove("dark");
+          localStorage.setItem("color-theme", "light");
+        }
 
         // If NOT set via local storage previously
+      } else {
+        if (document.documentElement.classList.contains("dark")) {
+          document.documentElement.classList.remove("dark");
+          localStorage.setItem("color-theme", "light");
         } else {
-            if (document.documentElement.classList.contains("dark")) {
-                document.documentElement.classList.remove("dark");
-                localStorage.setItem("color-theme", "light");
-            } else {
-                document.documentElement.classList.add("dark");
-                localStorage.setItem("color-theme", "dark");
-            }
+          document.documentElement.classList.add("dark");
+          localStorage.setItem("color-theme", "dark");
         }
+      }
     });
   }
   darkMode();
