--- a/src/components/TextArticle.astro
+++ b/src/components/TextArticle.astro
@@ -4,41 +4,48 @@ import IntroSection from "./IntroSection.astro";
 
 <IntroSection title="Disclaimer" id="Disclaimer">
   <Fragment slot="lead">
-    <p class="text-center text-xs font-Futurewave">
-      Only some functionality has been configured for this page!<br />
-      Think of implementing Next/Previous (Pagination for index and article page).
-    </p>
-    <h2 class="leading-9 text-xl my-16">
-      This is the final chapter and you have now learned how to setup a project
-      from scratch
-    </h2>
-    <ul
-      class="max-w-5xlxl mx-auto text-left text-sm font-Futurewave grid grid-cols-1 md:grid-cols-3 gap-8 list-disc"
-    >
-      <li>Set up the Astro framework.</li>
-      <li>Install dependencies with NPM.</li>
-      <li>Navigate VS Code and Git.</li>
-      <li>Create a simple HyGraph project.</li>
-      <li>Refactor code effectively.</li>
-      <li>Design your Astro blog/portfolio layout.</li>
-      <li>Import components seamlessly.</li>
-      <li>Fetch data from the HyGraph API.</li>
-      <li>Basic understanding on how to use Tailwind CSS.</li>
-    </ul>
-    <p class="leading-9 text-xl my-16">
-      If you’ve been following the project, you should now feel at ease using
-      the Astro framework, considering the topics we’ve covered.
-    </p>
-    <p class="leading-9 text-xl my-4">
-      However, there’s still plenty more to explore. This project has
-      intentionally been kept straightforward, so if you’re interested in diving
-      deeper, I encourage you to visit the following link: https://astro.build
-    </p>
-    <p class="text-center text-xs font-Futurewave">still much to do, but I will leave it up to you</p>
-    <p class="text-center text-xs font-Futurewave">play with colours, choose the colours that reflects you!</p>
-    <p class="text-center text-xs font-Futurewave">
-      change layout and components
-    </p>
-    <p class="text-center text-xs font-Futurewave">explore funtionalities</p>
+    <div class="font-Zen">
+      <p class="text-center text-xs font-Futurewave">
+        Only some functionality has been configured for this page!<br />
+        Think of implementing Next/Previous (Pagination for index and article page).
+      </p>
+      <h2 class="leading-9 text-xl my-16">
+        This is the final chapter and you have now learned how to setup a
+        project from scratch
+      </h2>
+      <ul
+        class="max-w-5xl mx-auto text-left grid grid-cols-1 md:grid-cols-3 gap-8 list-disc"
+      >
+        <li>Set up the Astro framework.</li>
+        <li>Install dependencies with NPM.</li>
+        <li>Navigate VS Code and Git.</li>
+        <li>Create a simple HyGraph project.</li>
+        <li>Refactor code effectively.</li>
+        <li>Design your Astro blog/portfolio layout.</li>
+        <li>Import components seamlessly.</li>
+        <li>Fetch data from the HyGraph API.</li>
+        <li>Basic understanding on how to use Tailwind CSS.</li>
+      </ul>
+      <p class="leading-9 text-xl my-16">
+        If you’ve been following the project, you should now feel at ease using
+        the Astro framework, considering the topics we’ve covered.
+      </p>
+      <p class="leading-9 text-xl my-4">
+        However, there’s still plenty more to explore. This project has
+        intentionally been kept straightforward, so if you’re interested in
+        diving deeper, I encourage you to visit the following link:
+        https://astro.build
+      </p>
+      <div class="font-Futurewave mt-16">
+        <p class="text-center">
+          still much to do, but I will leave it up to you
+        </p>
+        <p class="text-center">
+          play with colours, choose the colours that reflects you!
+        </p>
+        <p class="text-center">change fonts, layouts and components</p>
+        <p class="text-center">explore funtionalities</p>
+      </div>
+    </div>
   </Fragment>
 </IntroSection>
