--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -1,6 +1,7 @@
 ---
 // Style & Fonts
 import "../styles/index.css";
+
 // Supports weights 100-900
 import "@fontsource-variable/inter";
 import "@fontsource/zen-kaku-gothic-new";
@@ -20,10 +21,9 @@ const { title, description } = Astro.props;
   <title>{title}</title>
   <meta name="description" content={description} />
   <!-- bfcache -->
-  <!-- Pages that use WebAuthentication API are not eligible for back/forward cache 
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Cache-Control" content="no-cache" />
-  <meta http-equiv="Expires" content="0" /> -->
+  <meta http-equiv="Expires" content="0" />
   <!-- open graph -->
   <meta property="og:title" content={title} />
   <meta property="og:locale" content="en_US" />
