--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -58,10 +58,10 @@
 }
 
 .prose > p code {
-  @apply text-left mx-0.5 inline-block rounded-lg bg-gray-100 px-2 align-baseline leading-6 text-green-500 text-sm;
+  @apply text-left mx-0.5 inline-block rounded-lg bg-gray-100 px-2 align-baseline leading-6 text-sm;
 }
 
 .prose > pre {
   @apply my-6 text-left rounded-md;
-  @apply border-sky-500 bg-transparent py-3 text-base text-amber-400;
+  @apply border-sky-500 bg-gray-900 py-3 text-base text-amber-400;
 }
