--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -15,7 +15,6 @@ const { title, description } = Astro.props;
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" type="image/png" href="/favicon-16x16.png" />
   <meta name="viewport" content="width=device-width" />
   <meta name="generator" content={Astro.generator} />
   <title>{title}</title>
@@ -38,6 +37,8 @@ const { title, description } = Astro.props;
   <meta property="twitter:image" content={image} />
   <!-- sitemap -->
   <link rel="sitemap" href="/sitemap-index.xml" />
+  <link rel="icon" type="image/png" href="/favicon-16x16.png" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   <script is:inline>
     function setMode() {
       if (
